--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==3.4.3
 click==8.2.1
 colorama==0.4.6
 cookiecutter==2.6.0
+dj-database-url==3.0.1
 Django==5.2.5
 django-browser-reload==1.18.0
 django-tailwind==4.2.0
@@ -29,3 +30,4 @@ text-unidecode==1.3
 types-python-dateutil==2.9.0.20250809
 tzdata==2025.2
 urllib3==2.5.0
+whitenoise==6.9.0
