--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,8 @@ services:
     name: django-app
     env: python
     buildCommand: |
+     npm -v
+     node -v
       pip install -r requirements.txt
       python manage.py migrate --noinput
       python manage.py tailwind build   # 👈 build Tailwind first
