--- a/render.yaml
+++ b/render.yaml
@@ -5,10 +5,12 @@ services:
     buildCommand: |
      npm -v
      node -v
-      pip install -r requirements.txt
-      python manage.py migrate --noinput
-      python manage.py tailwind build   # 👈 build Tailwind first
-      python manage.py collectstatic --noinput
+     pip install -r requirements.txt
+    curl -fsSL https://deb.nodesource.com/setup_18.x | bash -
+    apt-get install -y nodejs
+    python manage.py migrate --noinput
+    python manage.py tailwind build    # 👈 generates dist/styles.css
+    python manage.py collectstatic --noinputt
     startCommand: gunicorn testproject.wsgi:application
     envVars:
       - key: DJANGO_SETTINGS_MODULE
